@@ -63,7 +63,6 @@ RESOURCES = 										\
 	-resource:$(top_srcdir)/data/GNOME_TomboyApplet.xml,GNOME_TomboyApplet.xml	\
 	-resource:$(top_builddir)/data/DefaultPlugins.desktop,DefaultPlugins.desktop	\
 	-resource:$(top_srcdir)/data/images/tomboy.png,tomboy.png			\
-	-resource:$(top_srcdir)/data/images/tintin.png,tintin.png			\
 	-resource:$(top_srcdir)/data/images/gnome-searchtool.png,gnome-searchtool.png
 
 $(TARGET): $(CSFILES) Defines.cs
