@@ -82,7 +82,6 @@ gconftool-2 --makefile-uninstall-rule \
 %{?_with_dbus:%{_libdir}/dbus-1.0/services/com.beatniksoftware.Tomboy.service}
 %{_mandir}/man1/%{name}.1.gz
 %{_datadir}/applications/tomboy.desktop
-%{_datadir}/pixmaps/tintin.png
 %{_sysconfdir}/gconf/schemas/tomboy.schemas
 
 %changelog
